<resources>
    <string name="app_name">Movie7</string>

    <!-- MainActivity, ToSeeActivity, SeenActivity, FavoritesActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="log_out_successful">Log out successful</string>

    <!-- nav_header_main.xml -->
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- activity_main_drawer.xml -->
    <string name="menu_search">Search</string>
    <string name="menu_to_see">To see</string>
    <string name="menu_seen">Seen</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_statistics">Statistics</string>
    <string name="communicate">Communicate</string>
    <string name="menu_opinion">Give your opinion</string>
    <string name="menu_settings">Settings</string>
    <string name="log_out">Log out</string>

    <!-- content_main.xml -->
    <string name="search_hint">Search a movie…</string>

    <!-- activity_movie_detail.xml, movie_card.xml -->
    <string name="movie_image_description">Image from the show</string>

    <!-- share.xml -->
    <string name="menu_share">Share the viewing</string>

    <!-- MainActivity -->
    <string name="no_description">No description available</string>

    <!-- activity_movie_detail, MovieDetailActivity -->
    <string name="time">%1$d min</string>
    <string name="add_to_see">Added in To See list</string>
    <string name="remove_to_see">Removed from To See list</string>
    <string name="add_seen">Added in Seen list</string>
    <string name="remove_seen">Removed from Seen list</string>
    <string name="add_favorite">Added in Favorites list</string>
    <string name="remove_favorite">Removed from Favorites list</string>
    <string name="cast">Cast</string>
    <string name="no_genre">No genre available</string>
    <string name="see_quotes">See quotes</string>
    <string name="no_cast">No cast informations available</string>
    <string name="button_to_see">To see</string>
    <string name="button_seen">Seen</string>
    <string name="button_favorite">Favorite</string>
    <string name="record">Record</string>
    <string name="stop_record">Stop record</string>
    <string name="play">Play</string>
    <string name="stop_playing">Stop playing</string>
    <string name="start_recording">Recording started</string>
    <string name="complete_recording">Recording Completed</string>
    <string name="play_recording">Recording Playing</string>
    <string name="file_end">End of file</string>
    <string name="play_stopped">Playing stopped</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="viewing_sharing">I just saw the movie %1$s</string>

    <!-- activity_comment.xml -->
    <string name="comment_explanation">This space allows you to give your opinion on this application, your ideas for improvements, or anything that can help our team of elite developers</string>
    <string name="comment_author">Your name</string>
    <string name="comment_text">Your comment</string>
    <string name="comment_send">Send</string>

    <!-- CommentActivity -->
    <string name="error_author">Please enter a name</string>
    <string name="error_text">Please enter a comment</string>
    <string name="comment_sent">Comment sent</string>

    <!-- activity_login.xml -->
    <!-- activity_signup.xml -->
    <string name="log_in_to_projetcci">Log in to Movie7</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="log_in">Log in</string>
    <string name="no_account_yet_create_one">No account yet ? Create one</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="sign_up_to_projetcci">Sign up to Movie7</string>
    <string name="discover_projetcci">What is Movie7 ? Find out !</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_login">Already a member ? Log in</string>

    <!-- LoginActivity -->
    <!-- SignUpActivity -->
    <string name="check_email">Please enter a valid email address</string>
    <string name="check_password">Password needs between 6 and 15 characters</string>
    <string name="authenticating">Authenticating…</string>
    <string name="log_in_successful">Log in successful</string>
    <string name="log_in_failed">Log in failed</string>
    <string name="check_confirmed_password">Password does not match</string>
    <string name="creating_account">Creating account…</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_failed">Sign up failed</string>

    <!-- preferences.xml -->
    <string name="clear_database">Clear database</string>
    <string name="clear_local">Clear your local database</string>
    <string name="about">About</string>
    <string name="source_code">Source code</string>
    <string name="github_url">https://github.com/TSO68/ProjetCCI</string>
    <string name="tmdb">TMDB</string>
    <string name="tmdb_usage">This app uses TMDB API</string>

    <!-- SettingsFragment -->
    <string name="clear_ask">Do you really want to clear your local database ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="db_cleared">Local database cleared</string>

    <!-- activity_reset_password.xml -->
    <string name="reset_title">I forgot my password and want to reset it</string>
    <string name="reset_password">Reset my password</string>

    <!-- ResetPasswordActivity -->
    <string name="email_sending">Email is sending…</string>
    <string name="email_sent">"Email sent to "</string>
    <string name="password_reset_failed">Password reset failed</string>

    <!-- activity_statistics -->
    <string name="nb_movies_seen">Number of movies seen</string>
    <string name="nb_movies_to_see">Number of movies to see</string>
    <string name="nb_movies_favorites">Number of favorites movies</string>
    <string name="total_viewing">Total viewing time</string>
    <string name="average_rating">Average rating</string>
    <string name="favorite_genre">Favorite genre</string>

    <!-- activity_qyotes -->
    <string name="character">Character</string>
    <string name="quote">Quote</string>
    <string name="add_quote">Add a quote</string>

    <!-- QuotesActivity -->
    <string name="quote_added">Quote added</string>
    <string name="set_character">Please set a character name</string>
    <string name="set_quote">Please set a quote</string>

    <!-- NotificationsService -->
    <string name="hey" translatable="false">Hey !</string>

    <!-- Intro Activity -->
    <string name="discover_movies">Discover popular movies</string>
    <string name="create_account">Create an account, get a list of movies, or search what you want !</string>
    <string name="movie_details">More details about a movie ?</string>
    <string name="get_details">Get details about a movie</string>
    <string name="like_movie">Like a movie ?</string>
    <string name="mark_movie">Mark a movie as favorite, seen or to see, rate it or give your opinion</string>
    <string name="vader_quote">No, I am your father !</string>
    <string name="share_quotes">Share movie quotes with the community !</string>
    <string name="get_stats">Get statistics</string>
    <string name="get_statistics">Get statistics about your movie library !</string>
</resources>