<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_to_see"
            android:icon="@drawable/ic_playlist_add_check"
            android:title="@string/menu_to_see" />
        <item
            android:id="@+id/nav_seen"
            android:icon="@drawable/ic_done"
            android:title="@string/menu_seen" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_create"
                android:title="@string/menu_opinion" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
