<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/comment_explanation"
        android:textSize="18sp"
        android:justificationMode="inter_word"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/firstDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:inputType="textPersonName"
        android:hint="@string/comment_author" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:layout_marginStart="10dip"
        android:layout_marginEnd="10dip"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/comment_text" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginStart="5dip"
        android:layout_marginEnd="5dip"
        android:text="@string/comment_send" />

</LinearLayout>