<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/titleReset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/reset_title"
        android:textColor="@color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editEmailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/your_email"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="5dip"
        android:layout_marginEnd="5dip"
        android:backgroundTint="@color/lightGray"
        android:text="@string/reset_password" />

</LinearLayout>