<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".activities.QuotesActivity">

    <LinearLayout
        android:id="@+id/layout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText
            android:id="@+id/editCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:inputType="textPersonName"
            android:hint="@string/character"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/quote"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:text="@string/add_quote" />
    </LinearLayout>

    <ListView
        android:id="@+id/listQuotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_add"
        android:listSelector="@android:color/transparent"
        android:divider="@color/gray"
        android:dividerHeight="0.3dip" />

    <ProgressBar
        android:id="@+id/progressBarQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress" />

</RelativeLayout>